apps/hellok8s/k8s/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellok8s
  namespace: hellok8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: hellok8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hellok8s
            port:
              number: 80
